fixed an issue with margin spacing

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -43,17 +43,17 @@ html {
         }
     }
 
-    .header {
-        h1 {
-            font-size: xx-large;
-            margin: 30px 0px 0px 0px;    
-        }
-    }
-
     .normal-div {
         display: flex;
         place-items: center;
         flex-direction: column;
+
+        &:first-child {
+            h1 {
+                font-size: xx-large;
+                margin: 30px 0px 0px 0px;   
+            } 
+        }
         
         &:nth-child(2) {
             margin: 10px 5px 0px 5px;
@@ -74,10 +74,11 @@ html {
 .btnClass {
     transition: 0.5s;
     text-align: center;
-    height: 50px;
+    height: px;
     width: 100px;
     color: white;
     background-color: $bg-item-color;
+    margin: 0px 5px 5px 5px;
     border: 1px solid white;
     border-radius: 25px;
 
@@ -112,10 +113,6 @@ html {
     transition: 0.5s;
     height: 35px;
     width: 35px;
-    background-color: $bg-item-color;
+    background-color: white;
     border-radius: 50%;
-}
-
-.active {
-    background-color: blue;
 }
